# gpt-text-authenticator

./: .pre-commit-config.yaml  README.md  cspell.json  pyproject.toml
examples/: evaluate_text.py
src/gpt_text_authenticator/: __init__.py  analysis.py  authenticator.py  cli.py  llm_factory.py  types.py
src/gpt_text_authenticator/agents/: __init__.py  base.py  evaluation.py
src/gpt_text_authenticator/schemas/: __init__.py  analysis_result.py
